--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="charlas de café">charlas de café <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="artículos">artículos <span class="quarto-category-count">(1)</span></div><div class="category" data-category="charlas de café">charlas de café <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -170,7 +170,42 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="charlas de café" data-listing-date-sort="1677639600000" data-listing-file-modified-sort="1720296238471" data-listing-date-modified-sort="1704078000000" data-listing-reading-time-sort="2">
+<div class="quarto-post image-right" data-index="0" data-categories="artículos" data-listing-date-sort="1704078000000" data-listing-file-modified-sort="1723142494357" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="thumbnail">
+<p><a href="./posts/article-2024-measurement/index.html"> <img src="./articulos/2024_Iglesias_et_al_GraphicalAbstract.webp" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/article-2024-measurement/index.html">
+<h3 class="no-anchor listing-title">
+<em>Application of computer vision techniques to estimate surface roughness on wood-based sanded workpieces</em>
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('artículos'); return false;">
+artículos
+</div>
+</div>
+<a href="./posts/article-2024-measurement/index.html">
+<div class="listing-description">
+
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/article-2024-measurement/index.html">
+<div class="listing-date">
+Jan 1, 2024
+</div>
+<div class="listing-author">
+Fabián Iglesias, Alfredo Aguilera, Arturo Padilla, Antonio Vizán &amp; Eduardo Diez
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="charlas de café" data-listing-date-sort="1677639600000" data-listing-file-modified-sort="1720296238471" data-listing-date-modified-sort="1704078000000" data-listing-reading-time-sort="2">
 <div class="thumbnail">
 <p><a href="./posts/cc-en-el-siglo-xxi/index.html"> <img src="./medios/cc.webp" class="thumbnail-image"> </a></p>
 </div>
