--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>El archivo de Fabián Iglesias - About</title>
+<title>El archivo de Fabián Iglesias - Sobre mí</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -82,15 +82,10 @@ ul.task-list li input[type="checkbox"] {
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item">
     <a class="nav-link active" href="./about.html" rel="" target="" aria-current="page">
- <span class="menu-text">About</span></a>
+ <span class="menu-text">Sobre mí</span></a>
   </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="https://github.com/" rel="" target=""><i class="bi bi-github" role="img">
-</i> 
- <span class="menu-text"></span></a>
-  </li>  
-  <li class="nav-item compact">
-    <a class="nav-link" href="https://twitter.com" rel="" target=""><i class="bi bi-twitter" role="img">
+    <a class="nav-link" href="https://twitter.com/fabianiglesias" rel="" target=""><i class="bi bi-twitter" role="img">
 </i> 
  <span class="menu-text"></span></a>
   </li>  
@@ -112,28 +107,23 @@ ul.task-list li input[type="checkbox"] {
   round " style="height: 15em; width: 15em;">
  <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">About</h1>
+<h1 class="title">Sobre mí</h1>
 </div>
 <div class="quarto-title-meta">
   </div>
 </header><main class="content" id="quarto-document-content">
-<p>About this blog</p>
+<section id="fabián-iglesias" class="level2">
+<h2 data-anchor-id="fabián-iglesias">Fabián Iglesias</h2>
+<p>Soy investigador científico en la Universidad de La Frontera. Mis áreas de interés en ingeniería mecánica son automatización de la producción, robótica e inteligencia artificial, con aplicación a la resolución de problemas interdisciplinares. Realicé una pasantía en la Ruhr-Universität Bochum en 2017 y recientemente participé en una gira tecnológica en Odense, Dinamarca, sobre robótica colaborativa. Tengo un profundo interés en la divulgación científica, lo que me ha llevado a participar en diversas iniciativas a nivel universitario. En el futuro, aspiro a consolidar mis intereses en investigación, ciencia y tecnología con la realización de un doctorado.</p>
 
 
+</section>
 </main> 
   <hr class="about-sep">
    <div class="about-links">
-  <a href="https://twitter.com" class="about-link" rel="" target="">
+  <a href="https://twitter.com/fabianiglesias" class="about-link" rel="" target="">
     <i class="bi bi-twitter"></i>
      <span class="about-link-text">Twitter</span>
-  </a>
-  <a href="https://linkedin.com" class="about-link" rel="" target="">
-    <i class="bi bi-linkedin"></i>
-     <span class="about-link-text">LinkedIn</span>
-  </a>
-  <a href="https://github.com" class="about-link" rel="" target="">
-    <i class="bi bi-github"></i>
-     <span class="about-link-text">Github</span>
   </a>
 </div>
 </div>
