--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
+<link href="./favicon.png" rel="icon" type="image/png">
 <script src="site_libs/quarto-listing/list.min.js"></script>
 <script src="site_libs/quarto-listing/quarto-listing.js"></script>
 <script src="site_libs/quarto-html/quarto.js"></script>
@@ -114,12 +115,8 @@ ul.task-list li input[type="checkbox"] {
 </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
-  <li class="nav-item">
-    <a class="nav-link" href="./about.html" rel="" target="">
- <span class="menu-text">Sobre mí</span></a>
-  </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="https://twitter.com/fabianiglesias" rel="" target=""><i class="bi bi-twitter" role="img">
+    <a class="nav-link" href="https://www.fabianiglesias.cl" rel="" target=""><i class="bi bi-house-door-fill" role="img">
 </i> 
  <span class="menu-text"></span></a>
   </li>  
@@ -165,7 +162,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="charlas de café" data-listing-date-sort="1722484800000" data-listing-file-modified-sort="1723328076467" data-listing-date-modified-sort="1722484800000" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="0" data-categories="charlas de café" data-listing-date-sort="1723262400000" data-listing-file-modified-sort="1724118154982" data-listing-date-modified-sort="1723262400000" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/cc-automatizacion-ciencia/index.html"> <img src="./medios/cc.webp" class="thumbnail-image"> </a></p>
 </div>
@@ -192,7 +189,7 @@ charlas de café
 <div class="metadata">
 <a href="./posts/cc-automatizacion-ciencia/index.html">
 <div class="listing-date">
-Aug 1, 2024
+Aug 10, 2024
 </div>
 <div class="listing-author">
 Fabián A. Iglesias Quilodrán
